{
    "name": "LocalUserAction",
    "maps": [
        {
            "name": "Player",
            "id": "1a583989-8ccf-492d-9064-5f723612a4cd",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "b20b163c-854a-468a-a969-9d4a14a10021",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPos",
                    "type": "Value",
                    "id": "cd166ee1-2cfd-426f-a927-80d7e30c677e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7ef39de-d11d-4d43-9110-9610796f117a",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43497be7-76b7-4f02-8d9b-f9a974469447",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}